@@ -1,5 +1,13 @@
 2008-07-28  Jens Granseuer  <jensgr@gmx.net>
 
+	* sound-theme.c: (load_index_theme_name),
+	(set_combox_for_theme_name), (theme_combobox_changed),
+	(setup_sound_theme), (get_sound_filename), (dump_theme),
+	(setting_column_edited), (setup_sound_theme_custom): plug some leaks,
+	simplify and/or clarify some code
+
+2008-07-28  Jens Granseuer  <jensgr@gmx.net>
+
 	* sound-theme.c: (custom_treeview_button_press_event_cb): don't
 	preview sounds for insensitive rows
 
